/*
 * $Id: ChangeLog,v 1.436 2002/10/13 18:06:24 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2002-10-13 11:41 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/win32ole.prg
    + Added support for End() method calls into OnError()

2002-10-13 11:04 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbvmpub.h
    * Changed #define HB_FS_PUBLIC to: ( ( HB_SYMBOLSCOPE ) 0x01 )

  * include/hbcomp.h
  * source/compiler/harbour.c
    * Added 3rd paramater bAlias to to void hb_compGenPushSymbol( char * szSymbolName, BOOL bFunction, BOOL bAlias );

  * include/hbexprb.c
  * include/hbmacro.h
  * source/compiler/genc.c
  * source/compiler/harbour.sly
  * source/vm/macro.c
    + Added 3rd paramater to all calls to hb_compGenPushSymbol()

  * source/vm/dynsym.c
  * source/vm/hvm.c
    * Fixed hb_vmProcessSymbols() to correctly support HB_FS_PUBLIC flag.

  * source/rdd/dbcmd.c
    * Formating.

2002-10-12 22:50 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
   * contrib/hbzlib/*
     ! Updated all source to take advantage of new ziparchive function
     ! Fixed also some memory leak on unziping functions
   - adler32.c compress.c crc32.c deflate.c deflate.h gvmat32c.c gzio.c infblock.c infblock.h infcodes.c infcodes.h inffast.c inffast.h inffixed.h inflate.c inftrees.c inftrees.h infutil.c infutil.h maketree.c trees.c trees.h uncompr.c
     ! This Files are now in zlib dir
   + Linux/*
       The Files necessary to compile hbzlib on linux.
   + Licence.txt
       The license of Ziparchive Library

2002-10-11 21:35 UTC-0300 Horacio Roldan <harbour_ar@yahoo.com.ar>
   * include/hbapirdd.h
   * include/hbrdddbf.h
   * include/hbrddcdx.h
   * include/hbrddntx.h
   * source/rdd/dbcmd.c
   * source/rdd/workarea.c
   * contrib/rdd_ads/ads1.c
   * contrib/rdd_ads/rddads.h